# raybox

./: -  .gitignore  AGENTS.md  CAPTURE_PLAN.md  CAPTURE_TODOS.md  CLAUDE.md  CRITICAL_FIXES_NEEDED.md  CURRENT_STATE.md  Cargo.toml  DEBUG_NOTES.md  DOC_DISCREPANCIES.md  FINAL_READINESS_ANALYSIS.md  HOW_HOT_RELOAD_WORKS__VERIFY.md  IMPLEMENTATION_READINESS.md  INVESTIGATION_REPORT.md  Justfile  MISSING_ELEMENTS_PLAN.md  NEXT_ACTIONS.md  NEXT_SESSION_TODOS.md  NEXT_STEPS.md  NEXT_STEPS_ANALYSIS.md  PROFILING_STRATEGY.md  READINESS_CHECKLIST.md  README.md  RENAME_CHECKLIST.md  RENAME_PLAN.md  RENAME_README.md  RUST_ONLY_ARCHITECTURE.md  SESSION_SUMMARY.md  V1_COMPLETE_REPORT.md  WASM_BUILD_SYSTEM_COMPLETE.md  WASM_BUILD_TOOL_DESIGN.md  WEBGPU_VERIFICATION.md  WORKFLOW_ANALYSIS.md  build.rs  compare_physical.sh  cpu_profile.json  index.html  justfile  prompter.json  (+2 more)
assets/fonts/: atlas.json
assets/todomvc/: reference_metadata.json
chromium_headless/: Local State
chromium_headless/Default/: History  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
chromium_headless/Default/DawnGraphiteCache/: index
chromium_headless/GrShaderCache/: index
chromium_headless/GraphiteDawnCache/: index
chromium_headless/ShaderCache/: index
chromium_headless/segmentation_platform/: ukm_db
classic/: README.md
classic/docs/: CAPTURE_PLAN.md  CAPTURE_TODOS.md  DEBUG_NOTES.md  DOC_DISCREPANCIES.md  RENDER_RESEARCH.md  RUST_ONLY_ARCHITECTURE.md  V1_COMPLETE_REPORT.md  WORKFLOW_ANALYSIS.md  cpu_profile.json  specs.md
classic/layouts/: README.md
docs/: CHROME_SETUP.md  DOM_EXTRACTION.md  EMERGENT_RENDERER_MASTERPLAN.md
docs/plans/: remove_dead_glyph_grid.md  retained.md  slang_everywhere.md  unified_sdf_rewrite.md  unify_and_optimize.md
emergent/: README.md
emergent/docs/: PHYSICAL_NOTES.md
examples/: demo_clay.rs  demo_msdf_relief.rs  demo_msdf_text.rs  demo_objects.rs  demo_spheres.rs  demo_text2d.rs  demo_text_shadow.rs  demo_text_vector_3d.rs  demo_towers.rs  generate_atlas.rs
output/web_verify/: summary.txt
reference/: LAYOUT_ANALYSIS.md  README.md  REFERENCE_METADATA.md  layout_precise_reference.json  layout_precise_renderer.json  todomvc_dom_layout.json  todomvc_dom_layout_700.json  todomvc_populated.html
reference/docs/: LAYOUT_ANALYSIS.md  REFERENCE_METADATA.md
reference/layouts/: layout.json
reference/screenshots/: README.md
renderer/: Cargo.toml
renderer/src/: emergent.rs  layout.rs  lib.rs  pipeline.rs  rectangle_pipeline.rs  shadow_pipeline.rs  shadow_shader.wgsl  text_renderer.rs
renderers/classic/: README.md
renderers/emergent/: Cargo.toml  README.md
renderers/emergent/assets/fonts/: inter_mtsdf_atlas.json  inter_sdf_atlas.json
renderers/emergent/docs/: ARCHITECTURE.md  MSDF_TEXT_PLAN.md  NEXT_STEPS_PLAN.md  PHYSICAL_NOTES.md
renderers/emergent/src/: font.rs  lib.rs  pipeline.rs  scene.rs  text_pipeline.rs
renderers/emergent/src/shaders/: mtsdf_text.wgsl  raymarch.wgsl
renderers/emergent/web/: index.html
research/claude/: Production-grade SDF text rendering for WebGPU applications.md  Rendering thousands of 3D SDF text glyphs at 60fps.md  Rust SDF libraries for 3D modeling: a complete guide.md  Rust WASM SDF text rendering: a complete technical guide.md  Slang + Rust for cross-platform SDF text rendering.md
research/gpt/: 3D Text Rendering with SDF and Slang or WGSL.txt  Rendering 3D Text with SDF Techniques in Rust (using wgpu).txt
research/youtube/: I'm making a game engine based on dynamic signed distance fields (SDFs) .txt
scripts/: check_shader_architecture.sh  extract_dom_layout.js  test_all_demos.sh
shaders/: bezier_sdf.slang  empty.slang  frame_composite.slang  overlay.slang  present.slang  rectangle.slang  sdf_clay.slang  sdf_clay_vector.slang  sdf_msdf_relief.slang  sdf_raymarch.slang  sdf_spheres.slang  sdf_text2d.slang  sdf_text2d_vector.slang  sdf_text_shadow.slang  sdf_text_shadow_vector.slang  sdf_text_vector.slang  sdf_text_vector_3d.slang  sdf_todomvc.slang  sdf_todomvc_3d.slang  sdf_towers.slang  text_msdf.wgsl
src/: architecture_guard.rs  browser_launch.rs  camera.rs  capture.rs  constants.rs  gpu_runtime_common.rs  input.rs  lib.rs  main.rs  overlay.rs  renderer.rs  screenshot_all.rs  sdf_renderer.rs  simple_overlay.rs  todomvc_shared.rs  web.rs  web_control.rs  web_input.rs  window_mode.rs
src/control/: mod.rs  protocol.rs  state.rs  ws_client.rs  ws_server.rs
src/demo_core/: camera_config.rs  camera_impls.rs  context.rs  mod.rs
src/demos/: clay.rs  empty.rs  frame_graph.rs  gpu_runtime_common.rs  mixed_ui_world.rs  mod.rs  objects.rs  retained_ui.rs  retained_ui_physical.rs  retained_ui_runtime_shared.rs  retained_ui_shared.rs  runner.rs  spheres.rs  text2d.rs  text_physical.rs  text_shadow.rs  todomvc.rs  todomvc_3d.rs  todomvc_common.rs  todomvc_retained.rs  towers.rs  ui2d_runtime.rs  ui_physical_runtime.rs  ui_physical_theme.rs  world3d_runtime.rs
src/hot_reload/: builder.rs  mod.rs  shader_loader.rs  state.rs  watcher.rs
src/retained/: fixed_scene.rs  mod.rs  samples.rs  showcase.rs  text.rs  text_scene.rs  ui.rs
src/text/: atlas.rs  char_grid.rs  glyph_atlas.rs  mod.rs  renderer.rs  vector_font.rs  vector_renderer.rs
tools/: CDP_IMPLEMENTATION.md  CDP_RESEARCH.md  Cargo.toml  README.md  check_console.sh  integration_test.sh
tools/src/: layout_precise.rs  main.rs  wasm_bindgen.rs  wasm_opt.rs
tools/src/cdp/: mod.rs
tools/src/commands/: capture.rs  capture_js.rs  compare_layouts.rs  extract_dom.rs  extract_dom_cdp.rs  generate_mtsdf_atlas.rs  generate_sdf_atlas.rs  integration_test.rs  mod.rs  pixel_diff.rs  screenshot.rs  screenshot_helpers.rs  serve.rs  text_quality.rs  visualize_layout.rs  wasm_build.rs  wasm_start.rs  watch.rs
tools/src/commands/capture/: core.rs  mod.rs
tools/src/layout/: mod.rs
tools/tests/: integration_tests.rs
web/: .gitignore  emergent.html  emergent_wasm.html  index.html  test_webgpu.html
web/reference/: layout_visualization.html  todomvc_dom_layout.json  todomvc_dom_layout_700.json
(+39 files in other folders)
