[package]
name = "raybox"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25"
bytemuck = { version = "1.14", features = ["derive"] }
memoffset = "0.9"
image = { version = "0.25", features = ["png"] }
pollster = "0.4"
anyhow = "1.0"
thiserror = "2.0"
env_logger = "0.11"
log = "0.4"

# Optional: windowed mode
winit = { version = "0.30", optional = true }

[build-dependencies]
wgsl_bindgen = "0.19"
anyhow = "1.0"

[features]
default = []
windowed = ["dep:winit"]
