[package]
name = "raybox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "25"
bytemuck = { version = "1.14", features = ["derive"] }
memoffset = "0.9"
image = { version = "0.25", features = ["png"] }
pollster = "0.4"
anyhow = "1.0"
thiserror = "2.0"
env_logger = "0.11"
log = "0.4"

# Math
glam = { version = "0.29", features = ["bytemuck"] }

# Optional: windowed mode
winit = { version = "0.30", optional = true }

# JSON parsing for atlas loading
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Font parsing for vector text
ttf-parser = "0.24"

[build-dependencies]
wgsl_bindgen = "0.19"
anyhow = "1.0"

[features]
default = []
windowed = ["dep:winit"]
web = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"] }
web-sys = { version = "0.3", features = [
    "Document", "Window", "HtmlCanvasElement", "Element",
    "KeyboardEvent", "Performance"
] }
