[package]
name = "raybox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demos"
path = "src/bin/demos.rs"
required-features = ["windowed"]

[[bin]]
name = "raybox-mcp"
path = "src/bin/raybox_mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "raybox-ctl"
path = "src/bin/raybox_ctl.rs"
required-features = ["control"]

[[bin]]
name = "raybox-dev"
path = "src/bin/raybox_dev.rs"
required-features = ["hot-reload"]

[[example]]
name = "demo_clay"
path = "examples/demo_clay.rs"
required-features = ["windowed"]

[[example]]
name = "demo_objects"
path = "examples/demo_objects.rs"
required-features = ["windowed"]

[[example]]
name = "demo_spheres"
path = "examples/demo_spheres.rs"
required-features = ["windowed"]

[[example]]
name = "demo_text2d"
path = "examples/demo_text2d.rs"
required-features = ["windowed"]

[[example]]
name = "demo_text_shadow"
path = "examples/demo_text_shadow.rs"
required-features = ["windowed"]

[[example]]
name = "demo_towers"
path = "examples/demo_towers.rs"
required-features = ["windowed"]

[dependencies]
wgpu = "25"
bytemuck = { version = "1.14", features = ["derive"] }
memoffset = "0.9"
image = { version = "0.25", features = ["png"] }
pollster = "0.4"
anyhow = "1.0"
thiserror = "2.0"
env_logger = "0.11"
log = "0.4"

# Math
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# Optional: windowed mode
winit = { version = "0.30", optional = true }

# System info for debug overlay (CPU/RAM usage)
sysinfo = { version = "0.37", optional = true }

# NVIDIA GPU monitoring (Linux/Windows)
nvml-wrapper = { version = "0.11", optional = true }

# Font parsing for vector text
ttf-parser = "0.24"

# Simple overlay text rendering (CPU-rasterized)
cosmic-text = { version = "0.12", optional = true }

# Control server dependencies
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "net", "macros", "time"], optional = true }

# Hot-reload dependencies
notify = { version = "6", optional = true }

# Serialization for control protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.5"

[build-dependencies]
wgsl_bindgen = "0.19"
anyhow = "1.0"

[features]
default = []
windowed = ["dep:winit", "dep:sysinfo", "dep:nvml-wrapper", "overlay"]
overlay = ["dep:cosmic-text"]
control = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio"]
mcp = ["control"]
hot-reload = ["dep:notify", "windowed", "control"]
web = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"] }
web-sys = { version = "0.3", features = [
    "Document", "Window", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element",
    "KeyboardEvent", "MouseEvent", "WheelEvent", "Event", "Performance", "Location",
    "WebSocket", "BinaryType", "CloseEvent", "ErrorEvent", "MessageEvent"
] }
